# --------------------------------------------------------------------------- #
# Project configuration 
# --------------------------------------------------------------------------- #
cmake_minimum_required(VERSION 3.24)

project(
  charmander
  VERSION 0.0.0
)

# --------------------------------------------------------------------------- #
# Load custom CMake modules
# --------------------------------------------------------------------------- #
list(
  APPEND CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
  "${CMAKE_CURRENT_SOURCE_DIR}/cmake"
)

# path configurations
include(CharmanderPaths)

# --------------------------------------------------------------------------- #
# Source
# --------------------------------------------------------------------------- #

add_subdirectory(src)

# --------------------------------------------------------------------------- #
# Testing
# --------------------------------------------------------------------------- #

add_subdirectory(tests)
